# wiki_modular

./: .flake8  .gitignore  .pre-commit-config.yaml  BUENAS_PRACTICAS.md  CONTRIBUTING.md  INSTRUCCIONES.md  LISTADO_SCRIPTS.md  Makefile  README.md  _sidebar.md  alias_override.md  config.yaml  custom.css  index.html  index_PlataformaBBDD.yaml  mismatch_report.csv  pipeline_codex.py  pyproject.toml  requirements.txt  search_index.json
_fuentes/: alias_override.yaml  mapa_encabezados.yaml  tmp_full.md
docs/: BUENAS_PRACTICAS.md  INSTRUCCIONES.md  LISTADO_SCRIPTS.md  README.md  buscar-avanzado.html  copy-button.js  custom.css  dynamic-toc.js  index.html  theme.js
scripts/: PlantillaEjecuciones.txt  auditar_sidebar_vs_fs.py  clean_orphaned_files.py  generar_index_desde_encabezados.py  generar_indice_busqueda.py  generar_mapa_encabezados.py  generar_sidebar.py  generar_sidebar_desde_index.py  ingest_wiki.py  ingest_wiki_v2.py  limpiar_md.py  limpiar_slug.py  mover_huerfanos.py  procesar_nuevos.py  resetear_entorno.py  reubicar_nuevas_secciones.py  utils.py  validar_enlaces_wiki.py  validar_sidebar_vs_fs.py  verificar_pre_ingesta.py  wiki_cli.py
tests/: __init__.py  test_auditar.py  test_comparar_versiones.py  test_editor_markdown.py  test_generar_index_incremental.py  test_generar_indice_busqueda.py  test_generar_mapa_encabezados.py  test_history.py  test_ingest_wiki_v2.py  test_iniciar_entorno.py  test_load_yaml.py  test_mover_huerfanos.py  test_panel_tareas.py  test_precheck_incremental.py  test_procesar_nuevos.py  test_resetear.py  test_sidebar.py  test_sidebar_cli.py  (+2 more)
(+114 files in other folders)
