[build-system]

requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "wiki_modular"
version = "0.1.0"

description = "Herramientas para wikis basadas en Docsify"
authors = [{name = "Equipo Docs"}]
readme = "docs/README.md"

dependencies = [
    "pyyaml>=6.0",
    "pdfminer.six>=20250506",
    "pdf2image>=1.16.3",
    "pytesseract>=0.3.10",
    "markdown2>=2.4.0",
    "streamlit>=1.32",
    "Flask>=3.0",
]

[tool.setuptools]
packages = {find = {where = ["src"]}}
py-modules = []


